
0.9.9b Sep 14, 2004
 * only add dependency if all it's dependencies where added (thanks to Sergey Sukiyazov)
 * updated encoding and translation of polish translation
 * updated man page
 * Brazilian Portuguese translation update
 * norwegian translation update
 * created german and french translations from babelfish (someone will have to update)
 * polish language update

0.9.9a Sep 06, 2004
 * preserve existing command line options when overriding configuration file
 * null terminated new working_dir string in configuration parsing (thanks Sean Donner)
 * updated makefile so that pkg permissions on /sbin are root:bin (thanks Jim Simmons)
 * fixed configuration overriding and parsing borkage (thanks to Sean Donner)

0.9.9 Sep 06, 2004
 * wrapped CURLOPT_FTP_USE_EPRT in ifdef for slack 9.0's curl libs
 * slack-suggests support (see FAQ)
 * added REG_ICASE to init_regex for case insensitive matching
 * print usage when given argument not caught by getop
 * set CURLOPT_FTP_USE_EPRT to off
 * updated makefile, moved /etc/slapt-getrc to /etc/slapt-get/slapt-getrc
 * documentation updates
 * use libcurls CURLOPT_FAILONERROR to fail on http codes > 300
 * now will not cache package source if no packages were parsed from the source
 * turned off EPSV for all libcurl operations... ftp.slackware.com doesn't support the EPSV command
 * moved working_dir_init out of read_rc_config() into main(), so that if the config
   file location is overridden, you don't get warnings about permissions on working
   directory

0.9.8k Aug 13, 2004
 * merged parent_deps into deps within lookup_pkg_dependencies() fixing more issues with recursive dependencies
 * fix for long package names that cause the regex to think it is a name and a version in one
   with --install and --show
 * added new linuxpackages.net mirror to example.slapt-getrc

0.9.8j Aug 08, 2004
 * updated get_installed_pkgs() to correctly work when ROOT environment variable is set
 * updated man page